--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -196,11 +196,16 @@ figure figcaption {
     display: none;
     transition: 800ms all;
 }
+#colorlib-aside #colorlib-main-menu ul li:hover ul{
+    display: block;
+}
 #colorlib-aside #colorlib-main-menu ul li ul li{
     transition: 800ms all;
+    margin: 0;
 }
 #colorlib-aside #colorlib-main-menu ul li ul a{
     font-size: 14px;
+    color: #FFC300;
 }
 #colorlib-aside #colorlib-main-menu ul li a:after {
     content: "";
@@ -577,7 +582,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
 
 .colorlib-heading {
     font-size: 18px;
-    margin-bottom: 4em;
+    margin-bottom: 2em;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 5px;
@@ -1263,7 +1268,85 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     text-decoration: none;
     color: #FFC300;
 }
-
+.colorlib-navi .colorlib-narrow-content img{
+    width: 25%;
+    object-fit: contain;
+}
+.colorlib-navi .colorlib-narrow-content .contact{
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+}
+.colorlib-navi .colorlib-narrow-content:nth-child(2) .row{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -8px;
+    padding: 60px 0;
+    position: relative;
+    width: 100%;
+}
+.colorlib-navi .colorlib-narrow-content:nth-child(2){
+    width: 100%;
+    height: 100%;
+    background: url("../images/img-4.jpg");
+    background-size: cover;
+    position: relative;
+    padding: 0;
+    background-position: center;
+}
+.colorlib-navi .colorlib-narrow-content:nth-child(2):before{
+    content:"";
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.colorlib-navi .colorlib-narrow-content .contact input{
+    width: 100%;
+    margin-bottom: 15px;
+    border: 1px solid white;
+    color: white;
+    background-color: rgba(255, 195, 0, 0.2);
+}
+.colorlib-navi .colorlib-narrow-content .contact input::placeholder{
+    color: white;
+}
+.colorlib-navi .colorlib-narrow-content .contact input[type="submit"]{
+    width: max-content;
+    padding: 1.5px 5px;
+}
+.colorlib-navi .colorlib-narrow-content .contact select{
+    width: 100%;
+    margin-bottom: 15px;
+    height: 33px;
+    border: 1px solid white;
+    color: white;
+    background-color: rgba(255, 195, 0, 0.2);
+}
+.colorlib-navi .colorlib-narrow-content .contact select::placeholder{
+    color: white;
+}
+.colorlib-navi .colorlib-narrow-content .contact textarea{
+    width: 100%;
+    margin-bottom: 15px;
+    border: 1px solid white;
+    color: white;
+    background-color: rgba(255, 195, 0, 0.2);
+}
+.colorlib-navi .colorlib-narrow-content .contact textarea::placeholder{
+    color: white;
+}
+.colorlib-navi .colorlib-narrow-content .contact input:focus-visible{
+    outline: none;
+}
+.colorlib-navi .colorlib-narrow-content .contact select:focus-visible{
+    outline: none;
+}
+.colorlib-navi .colorlib-narrow-content .contact textarea:focus-visible{
+    outline: none;
+}
 #map {
     width: 100%;
     height: 700px;
