--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -340,6 +340,7 @@ figure figcaption {
 #colorlib-hero .flexslider .slides {
     position: relative;
     overflow: hidden;
+    box-shadow: 0 0 20px 1px #0000006b;
 }
 
 #colorlib-hero .flexslider .slides li {
@@ -762,6 +763,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     display: block;
     margin-bottom: 40px;
     z-index: 0;
+    box-shadow: 0 0 20px 1px #0000006b;
 }
 
 .services-wrap .services-img {
@@ -983,6 +985,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     width: 100%;
     display: block;
     margin-bottom: 30px;
+    box-shadow: 0 0 20px 2px #0000007d;
 }
 
 .project .desc {
@@ -1158,6 +1161,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 20px 2px #0000007d;
 }
 
 .colorlib-counters .icon {
@@ -1272,36 +1276,101 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     width: 25%;
     object-fit: contain;
 }
-.colorlib-navi .colorlib-narrow-content .contact{
+.colorlib-navi .icons{
+    background-color: #FFC300;
     display: flex;
     flex-direction: column;
-    width: 35%;
+    align-items: center;
+    padding: 2vh 0 12vh 0;
 }
-.colorlib-navi .colorlib-narrow-content:nth-child(2) .row{
+.colorlib-navi .whiteArea{
+    display: flex;
+}
+.colorlib-navi .contact-form{
+    margin: 0 2% 0 5%;
+    width: 61%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin-top: -8vh;
+    padding:5vh 5vh 0 5vh;
+    box-shadow: 0 0 20px 2px #0000004a;
+}
+.colorlib-navi .contact-image{
+    margin: 0 5% 0 2%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin-top: -8vh;
+    padding:5vh 5vh 0 5vh;
+    box-shadow: 0 0 20px 2px #0000004a;
+}
+.colorlib-navi .contact-image h5{
+    font-weight: bold;
+    font-size: 18px;
+}
+.colorlib-navi .contact-image img{
+    object-fit: contain;
+    max-height: 200px;
+}
+
+.colorlib-navi .contact-form>div{
     display: flex;
     justify-content: space-between;
-    margin-top: -8px;
-    padding: 60px 0;
-    position: relative;
-    width: 100%;
+    margin-bottom: 2vh;
 }
-.colorlib-navi .colorlib-narrow-content:nth-child(2){
-    width: 100%;
-    height: 100%;
-    background: url("../images/img-4.jpg");
-    background-size: cover;
-    position: relative;
-    padding: 0;
-    background-position: center;
+.colorlib-navi .contact-form>div>div{
+    display: flex;
+    flex-direction: column;
+    width: 49%;
 }
-.colorlib-navi .colorlib-narrow-content:nth-child(2):before{
-    content:"";
-    background: rgba(0, 0, 0, 0.8);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.colorlib-navi .contact-form textarea{
+    margin-bottom: 2vh;
+}
+.colorlib-navi .contact-form input[type="submit"]{
+    height: 38px;
+    width: 20%;
+}
+.colorlib-navi .contact-form div label{
+    display: block;
+}
+.colorlib-navi .contact-form div input{
+    width: 100%;
+    height: 38px;
+}
+.colorlib-navi .contact-form div select{
+    width: 100%;
+    height: 38px;
+}
+.colorlib-navi .icons .contact-icons{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3vh;
+}
+.colorlib-navi .icons img {
+    width: 21%;
+}
+.colorlib-navi .contact-icon{
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    font-weight: bold;
+}
+.colorlib-navi .contact-icon .icon{
+    border-radius: 50%;
+    border: 3px solid #272727;
+    width: 55px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1vh;
+    font-size: 15px;
+}
+.colorlib-navi .contact-icon .icon i{
+    color: #272727;
 }
 .colorlib-navi .colorlib-narrow-content .contact input{
     width: 100%;
