--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -59,6 +59,9 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 0 30px 0;
 }
 
+li{
+    list-style: none;
+}
 figure {
     margin-bottom: 2.5em;
     float: left;
@@ -578,7 +581,11 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     width: 100%;
     display: block;
 }
-
+.colorlib-blog .blog-entry .desc{
+    background-color: white;
+    padding: 2vh;
+    box-shadow: 0 0 20px #0000002b;
+}
 @media screen and (max-width: 768px) {
     .colorlib-blog,
     .colorlib-work,
