--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -431,12 +431,14 @@ font-size: 9px;
     right: -15px;
     padding: 30px;
     background: #FFC300;
+    width: 600px;
 }
 
 @media screen and (max-width: 768px) {
     #colorlib-hero .flexslider .slider-text > .slider-text-inner .desc {
         right: 0;
         left: 0;
+        width: calc(100vw - 30px);
     }
 }
 
